[package]
name = "tabcat"
version = "0.1.0"
authors = ["john"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
clap = "3.0.0-beta.2"
x11rb = { version = "0.8.0", features = ["xinput"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
detour = "0.7.1"

[features]
default = ["x11"]
x11 = ["x11rb"]

[lib]
name = "tabcat"
crate-type = ["dylib"]
